--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Oswald', Courier, monospace;
+    text-decoration: none;
+    color: #fff;
+     
 }
 
 body {
@@ -54,9 +57,23 @@ header {
 }
 
 .titulo{
-    font-size: 60px;
+    padding: 10px;
+    border: solid;
+    background-color: rgb(2, 126, 85);
+    border-radius: 20px;
+    font-size: 50px;
     font-weight: 400;
+    animation: scaleAnimation 2s infinite alternate;
 }
+
+@keyframes scaleAnimation {
+    0% {
+      transform: scale(1); /* Escala normal */
+    }
+    100% {
+      transform: scale(1.1); /* Escala aumentada */
+    }
+  }
 
 .pesquisa{
     height: 60px;
@@ -198,5 +215,62 @@ button {
 button:hover {
     color: #ff6600;
 }
+
+.fundo-planos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    background: url('../imagens/gif-de-fundo.gif');
+}
+
+.conteiner-planos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 700px;
+    height: 700px;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 20px;
+    border: solid;
+}
+
+.preco{
+    font-size: 110px;
+    font-weight: 400;
+    color: #ff6600;
+    animation: scaleAnimation 1.5s infinite alternate;
+}
+
+.texto-planos{
+    font-size: 30px;
+    margin: 20px;
+}
+
+.telegram{
+    font-size: 50px;
+    animation: telegramAnimation 2s infinite alternate;
+}
+
+.fi-brands-telegram{
+    transition: 0.5s;
+}
+
+.fi-brands-telegram:hover{
+    color: #56a5dd;
+}
+
+@keyframes telegramAnimation {
+    0% {
+      transform: scale(1); /* Escala normal */
+    }
+    100% {
+      transform: scale(1.2); /* Escala aumentada */
+    }
+  }
+
 
 
